# wechat2obsidian

./: .gitignore  LICENSE  README.md  entry_point.py  pyproject.toml  test_urls.txt  双击导入单篇.bat  双击批量导入.bat  查看配置.bat
src/wechat2obsidian/: __init__.py  cli.py  config.py  downloader.py  fetcher.py  parser.py  writer.py
